--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ hdfs==2.7.0
 httpcore==1.0.0
 httplib2==0.21.0
 httptools==0.6.1
-httpx==0.25.2
+httpx
 idna==3.4
 imagesize==1.4.1
 importlib-metadata==6.7.0
