SECRETS AND VALUES

--- a/deploy/microservice-augury-gen-ai/templates/deployment.yaml
+++ b/deploy/microservice-augury-gen-ai/templates/deployment.yaml
@@ -47,6 +47,8 @@ spec:
             - configMapRef:
                 name: {{ .Chart.Name }}
             - secretRef:
+                name: augury-common-genai
+            - secretRef:
                 name: {{ .Chart.Name }}
             # bring common environment variables
             - configMapRef:
